// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabProposals shows a message if still connecting 1`] = `
<tmpage-stub
  data-title="Proposals"
  hideheader="true"
  managed="true"
  subtitle=""
  title=""
>
  <tmdataempty-stub
    icon="gavel"
    subtitle="There are currently no governance proposals to display.
  Click the 'Create Proposal' button to submit a proposal."
    title="No Governance Proposals"
  />
   
  <template>
    <tableproposals-stub
      proposals="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`TabProposals shows a message if still loading 1`] = `
<tmpage-stub
  data-title="Proposals"
  hideheader="true"
  loading="true"
  managed="true"
  subtitle=""
  title=""
>
  <tmdataempty-stub
    icon="gavel"
    subtitle="There are currently no governance proposals to display.
  Click the 'Create Proposal' button to submit a proposal."
    title="No Governance Proposals"
  />
   
  <template>
    <tableproposals-stub
      loading="true"
      proposals="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`TabProposals shows a message if there is nothing to display 1`] = `
<tmpage-stub
  data-title="Proposals"
  hideheader="true"
  managed="true"
  subtitle=""
  title=""
>
  <tmdataempty-stub
    icon="gavel"
    subtitle="There are currently no governance proposals to display.
  Click the 'Create Proposal' button to submit a proposal."
    title="No Governance Proposals"
  />
   
  <template>
    <tableproposals-stub
      proposals="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`TabProposals shows a proposals table 1`] = `
<tmpage-stub
  data-title="Proposals"
  hideheader="true"
  managed="true"
  subtitle=""
  title=""
>
  <tmdataempty-stub
    icon="gavel"
    subtitle="There are currently no governance proposals to display.
  Click the 'Create Proposal' button to submit a proposal."
    title="No Governance Proposals"
  />
   
  <template>
    <tableproposals-stub
      proposals="[object Object]"
    />
  </template>
</tmpage-stub>
`;
